crates/cyrs-sema/tests/snapshots/resolved_hir__14_unwind_value.snap
---
source: crates/cyrs-sema/tests/resolved_hir.rs
expression: "pipeline_stmt(stmt, false)"
---
Statement {
  span: 0..0
  bindings: [
    Var(0) 0: x (Value) @0..0
  ]
  clauses: [
    Unwind @0..0 {
      list: [1, 2]
      bind: x[bind:Var(0)←Value@0..0]
    }
    Return(distinct=false) @0..0 {
      proj[0]: Var(0)[x←Value@0..0]
    }
  ]
}
