crates/cyrs-sema/tests/snapshots/resolved_hir__16_double_with_barrier.snap
---
source: crates/cyrs-sema/tests/resolved_hir.rs
expression: "pipeline_stmt(stmt, false)"
---
Statement {
  span: 0..0
  bindings: [
    Var(0) 0: a (Node) @0..0
    Var(1) 1: b (Node) @0..0
    Var(2) 2: c (Node) @0..0
  ]
  clauses: [
    Match @0..0 {
      Pattern {
        part[0] [
          Node(a[bind:Var(0)←Node@0..0]) @0..0
        ]
      }
    }
    Match @0..0 {
      Pattern {
        part[0] [
          Node(b[bind:Var(1)←Node@0..0]) @0..0
        ]
      }
    }
    With @0..0 {
      proj[0]: Var(0)[a←Node@0..0]
    }
    Match @0..0 {
      Pattern {
        part[0] [
          Node(c[bind:Var(2)←Node@0..0]) @0..0
        ]
      }
    }
    With @0..0 {
      proj[0]: Var(0)[a←Node@0..0]
      proj[1]: Var(2)[c←Node@0..0]
    }
    Return(distinct=false) @0..0 {
      proj[0]: Var(0)[a←Node@0..0]
      proj[1]: Var(2)[c←Node@0..0]
    }
  ]
}
