crates/cyrs-sema/tests/snapshots/resolved_hir__17_kind_mismatch_node_arithmetic.snap
---
source: crates/cyrs-sema/tests/resolved_hir.rs
expression: "pipeline_stmt_with_kinds(stmt, false)"
---
Statement {
  span: 0..0
  bindings: [
    Var(0) 0: n (Node) @0..0
  ]
  clauses: [
    Match @0..0 {
      Pattern {
        part[0] [
          Node(n[bind:Var(0)←Node@0..0]) @0..0
        ]
      }
    }
    Return(distinct=false) @0..0 {
      proj[0]: (Var(0)[n←Node@0..0] + 1)
    }
  ]
}

Diagnostics:
  E2007: variable `n` has kind `Node` but is used in an arithmetic expression; only `Value` variables are valid here
