crates/cyrs-sema/tests/snapshots/resolved_hir__18_kind_mismatch_path_prop_access.snap
---
source: crates/cyrs-sema/tests/resolved_hir.rs
expression: "pipeline_stmt_with_kinds(stmt, false)"
---
Statement {
  span: 0..0
  bindings: [
    Var(0) 0: p (Path) @0..0
  ]
  clauses: [
    Return(distinct=false) @0..0 {
      proj[0]: Var(0)[p←Path@0..0].length
    }
  ]
}

Diagnostics:
  E2007: variable `p` has kind `Path` and does not support property access; use `nodes()` or `relationships()` to extract graph elements first
