crates/cyrs-sema/tests/snapshots/resolved_hir__19_list_comprehension.snap
---
source: crates/cyrs-sema/tests/resolved_hir.rs
assertion_line: 804
expression: "pipeline(\"MATCH (n) RETURN [x IN n.friends WHERE x.active | x.name]\")"
---
Statement {
  span: 0..57
  bindings: [
    Var(0) 0: n (Node) @7..8
    Var(1) 1: x (Value) @16..57
  ]
  clauses: [
    Match @0..9 {
      Pattern {
        part[0] [
          Node(n[bind:Var(0)←Node@7..8]) @5..9
        ]
      }
    }
    Return(distinct=false) @9..57 {
      proj[0]: [x[bind:Var(1)←Value@16..57] IN Var(0)[n←Node@7..8].friends WHERE Var(1)[x←Value@16..57].active | Var(1)[x←Value@16..57].name]
    }
  ]
}
