crates/cyrs-sema/tests/snapshots/resolved_hir__20_pattern_predicate.snap
---
source: crates/cyrs-sema/tests/resolved_hir.rs
assertion_line: 815
expression: "pipeline(\"MATCH (a) WHERE (a)-[:KNOWS]->(:Person) RETURN a\")"
---
Statement {
  span: 0..48
  bindings: [
    Var(0) 0: a (Node) @7..8
  ]
  clauses: [
    Match @0..39 {
      Pattern {
        part[0] [
          Node(a[bind:Var(0)←Node@7..8]) @5..9
        ]
      }
    }
    Where @9..39 {
      predicate: PatternPred((a[bind:Var(0)←Node@7..8])->[_]:KNOWS():Person)
    }
    Return(distinct=false) @39..48 {
      proj[0]: Var(0)[a←Node@7..8]
    }
  ]
}
